# django_stimulus_starter

./: LICENSE  README.md  pyproject.toml
django_stimulus_starter/: manage.py  package-lock.json  package.json  server.js  webpack.config.js
django_stimulus_starter/assets/js/: index.js
django_stimulus_starter/assets/js/controllers/: test_controller.js
django_stimulus_starter/assets/stylesheets/: base.scss
django_stimulus_starter/demo/: urls.py  views.py
django_stimulus_starter/demo/templates/: index.html
django_stimulus_starter/django_stimulus_starter/: asgi.py  settings.py  urls.py  wsgi.py
django_stimulus_starter/templates/: base.html
